syntax = "proto3";

option go_package = "/protobuf";

message Message {
  string type = 1;// instance id
  bytes id = 2;
  uint32 sender = 3;
  bytes data = 4;
}


// provable broadcast
message Value{
  bytes value = 1;// paload
  bytes validation = 2;// for external validating
}
message Echo{
  bytes sigshare = 1 ;
}

// smvba
message Lock{
  bytes value = 1;
  bytes validation = 2;
  bytes sig = 3;
}
message Finish{
  bytes value = 1;
  bytes validation = 2;
  bytes sig = 3;
}
message Done{
  bytes coinShare = 1 ;
}
message Halt{//Halt:=<Finish> of the round-leader
  bytes value = 1;
  bytes validation = 2;
  bytes sig = 3;
}
message PreVote{
  bool vote = 1;
  bytes value = 2;
  bytes validation = 3;
  bytes sig = 4;
}
message Vote{
  bool vote = 1;
  bytes value =2;
  bytes validation = 3;
  bytes sig =4;
  bytes sigshare = 5;
}


//Dumbo-NG
message Proposal{
  bytes tx = 1;
  bytes hash = 2; // hash of previous tx
  bytes sig = 3; // signature on previous tx
}
message Received{
  bytes sigshare = 1;
}

message BLockSetValue{
  repeated uint32 pid = 1;
  repeated uint32 slot = 2;
  repeated bytes hash = 3;
}
message BLockSetValidation{
  repeated bytes sig = 1;
}

//callHelp
message CallHelp{
  uint32 pid = 1;
  uint32 slot = 2;
  bytes sig = 3;
}
message Help{
  uint32 pid = 1;
  uint32 slot = 2;
  bytes shard = 3;
  bytes root = 4;
  repeated bytes proof1 = 5;
  repeated int64 proof2 = 6;
}