syntax = "proto3";

option go_package = "/protobuf";

message Message {
  string type = 1;// instance id
  bytes id = 2;
  uint32 sender = 3;
  bytes data = 4;
}


// provable broadcast
message Value{
  bytes value = 1;// paload
  bytes validation = 2;// for external validating
}
message Echo{
  bytes sigshare = 1 ;
}

// smvba
message Lock{
  bytes value = 1;
  bytes sig = 2;
}
message Finish{
  bytes value = 1;
  bytes sig = 2;
}
message Done{
  bytes coinShare = 1 ;
}
message Halt{//Halt:=<Finish> of the round-leader
  bytes value = 1;
  bytes sig = 2;
}
message PreVote{
  bool vote = 1;
  bytes value = 2;
  bytes sig = 3;
}
message Vote{
  bool vote = 1;
  bytes value =2;
  bytes sig =3;
  bytes sigshare = 4;
}

//apdb
message Store{
  bytes vc = 1;
  bytes shard =2;
  repeated bytes proof1 = 3;
  repeated int64 proof2 = 4;
}
message Stored{
  bytes sigshare = 1 ;
}
message Recast{
  bytes shard = 1;
  repeated bytes proof1 = 2;
  repeated int64 proof2 = 3;
}

//vdd
message Call{
  repeated uint32 indices = 1;
}
message Strong{
  repeated  uint32 shardIndices = 1;
  repeated  bytes senderShards = 2;
  repeated  bytes receiverShards = 3;
}
message Weak{
  repeated  uint32 shardIndices = 1;
  repeated  bytes senderShards = 2;
}


//Nemo-S
message Proposal{
  bytes tx = 1;
  bytes hash = 2; // hash of previous tx
  bytes sig = 3; // signature on previous tx
}
message Received{
  bytes sigshare = 1;
}


message BLockSetValue{
  repeated uint32 pid = 1;
  repeated uint32 slot = 2;
  repeated bytes hash = 3;
}
message BLockSetValidation{
  repeated bytes sig = 1;
}